# fast-api-learn

./: .env  main.py  pyproject.toml
config/: database.py
handlers/: jwt_handler.py
models/: user.py
routers/: routes.py
schemas/: user_schema.py
